--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,10 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
-
     <link rel="stylesheet" href="{% static 'css/templatemo-hexashop.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl-carousel.css' %}">
-
     <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
 </head>
 <body>
@@ -44,36 +41,23 @@
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
+                    <a href="{% url 'home_url' %}" class="logo">
                         <img src="{% static 'images/logo.png' %}">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                        <li class="scroll-to-section"><a href="#men">Men's</a></li>
-                        <li class="scroll-to-section"><a href="#women">Women's</a></li>
-                        <li class="scroll-to-section"><a href="#kids">Kid's</a></li>
-                        <li class="submenu">
-                            <a href="javascript:;">Pages</a>
-                            <ul>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="products.html">Products</a></li>
-                                <li><a href="single-product.html">Single Product</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                            </ul>
+                        {% for link in links %}
+                            <li class="scroll-to-section">
+                                <a href="{% url link.url %}" class="{{ link.active }}">{{ link.name }}</a>
+                            </li>
+                        {% endfor %}
+                        <li class="scroll-to-section">
+                            <a href="{% url 'cart_detail' %}">
+                                Cart
+                                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                            </a>
                         </li>
-                        <li class="submenu">
-                            <a href="javascript:;">Features</a>
-                            <ul>
-                                <li><a href="#">Features Page 1</a></li>
-                                <li><a href="#">Features Page 2</a></li>
-                                <li><a href="#">Features Page 3</a></li>
-                                <li><a rel="nofollow" href="https://templatemo.com/page/4" target="_blank">Template Page
-                                    4</a></li>
-                            </ul>
-                        </li>
-                        <li class="scroll-to-section"><a href="#explore">Explore</a></li>
                     </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -136,7 +120,6 @@
             <div class="col-lg-12">
                 <div class="under-footer">
                     <p>Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved.
-
                         <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
                     </p>
                     <ul>
