--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,27 +3,32 @@
 {% block content %}
     <div class="page-heading about-page-heading" id="top" style="background: none">
         <div class="profile" align="center">
-            <table>
+            <table style="width: 30vw">
                 <tr style="border-bottom: 1px solid black;">
                     <td>Email:</td>
-                    <td>{{ user.email }}</td>
+                    <td align="right">{{ user.email }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
                     <td>First Name:</td>
-                    <td>{{ user.first_name }}</td>
+                    <td align="right">{{ user.first_name }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
                     <td>Last Name:</td>
-                    <td>{{ user.last_name }}</td>
+                    <td align="right">{{ user.last_name }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
                     <td>Date Joined:</td>
-                    <td>{{ user.date_joined }}</td>
+                    <td align="right">{{ user.date_joined }}</td>
                 </tr>
                 <tr>
                     <td align="left"><a href="{% url 'favourites_url' %}">My Favourites</a></td>
                     <td align="right"><a href="">History</a></td>
                 </tr>
+                {% if user.is_staff %}
+                    <tr>
+                        <td><a href="{% url 'tickets_url' %}">Show Tickets</a></td>
+                    </tr>
+                {% endif %}
             </table>
         </div>
     </div>
