--- a/templates/base.html
+++ b/templates/base.html
@@ -94,9 +94,9 @@
                         <img src="{% static 'images/white-logo.png' %}" alt="hexashop ecommerce templatemo">
                     </div>
                     <ul>
-                        <li><a href="#">16501 Collins Ave, Sunny Isles Beach, FL 33160, United States</a></li>
+                        <li><a href="#">ТОО «Университет Международного Бизнеса имени Кенжегали Сагадиева» РК г.Алматы ул.Абая 8а</a></li>
                         <li><a href="#">hexashop@company.com</a></li>
-                        <li><a href="#">010-020-0340</a></li>
+                        <li><a href="#">+7(727)259-80-00</a></li>
                     </ul>
                 </div>
             </div>
@@ -111,10 +111,10 @@
             <div class="col-lg-3">
                 <h4>Useful Links</h4>
                 <ul>
-                    <li><a href="#">Homepage</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="{% url 'home_url' %}">Homepage</a></li>
+                    <li><a href="{% url 'men_url' %}">About Us</a></li>
+                    <li><a href="{% url 'women_url' %}">Help</a></li>
+                    <li><a href="{% url 'kid_url' %}">Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-lg-3">
