--- a/templates/about.html
+++ b/templates/about.html
@@ -62,7 +62,7 @@
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.instagram.com/yerraah/?igsh=MTRweDk4cTU3d3Zncw%3D%3D"><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -72,7 +72,7 @@
                             <img src="{% static 'images/team-member-01.jpg' %}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
+                            <h4>Коблан Ерасыл</h4>
                             <span>Product Caretaker</span>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.instagram.com/baibekovaak_?igsh=eHN0dGd6NGNkaWZw&utm_source=qr"><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -93,7 +93,7 @@
                             <img src="{% static 'images/team-member-02.jpg' %}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
+                            <h4>Байбекова Ахмаржан</h4>
                             <span>Product Caretaker</span>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <div class="hover-effect">
                                 <div class="inner-content">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.instagram.com/nuurdi_/?igsh=NzNwY2ZhNno1dm9n"><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="#"><i class="fa fa-behance"></i></a></li>
@@ -114,7 +114,7 @@
                             <img src="{% static 'images/team-member-03.jpg' %}">
                         </div>
                         <div class="down-content">
-                            <h4>Ragnar Lodbrok</h4>
+                            <h4>Султанали Нурдияр</h4>
                             <span>Product Caretaker</span>
                         </div>
                     </div>
@@ -193,14 +193,14 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>Sunny Isles Beach, FL 33160, United States</span></li>
-                                <li>Phone:<br><span>010-020-0340</span></li>
-                                <li>Office Location:<br><span>North Miami Beach</span></li>
+                                <li>Store Location:<br><span>РК г.Алматы ул.Абая 8а</span></li>
+                                <li>Phone:<br><span>+7(727)259-80-00</span></li>
+                                <li>Office Location:<br><span>РК г.Алматы ул.Абая 8а</span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>07:30 AM - 9:30 PM Daily</span></li>
+                                <li>Work Hours:<br><span>Понедельник — Пятница с 09:00 до 18:00</span></li>
                                 <li>Email:<br><span>info@company.com</span></li>
                                 <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
