--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div id="map">
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90186.37207676383!2d-80.13495239500924!3d25.9317678710111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ad1877e4a82d%3A0xa891714787d1fb5e!2sPier%20Park!5e1!3m2!1sen!2sth!4v1637512439384!5m2!1sen!2sth" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4542347295096!2d76.94939847653814!3d43.24190107893467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836ee5463fffff%3A0x18bf9a2d589649bb!2z0L_RgC3Rgi4g0JDQsdCw0Y8gONCwLCDQkNC70LzQsNGC0YsgMDUwMDEw!5e0!3m2!1sru!2skz!4v1713865064642!5m2!1sru!2skz" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
                       <!-- You can simply copy and paste "Embed a map" code from Google Maps for any location. -->
                       
                     </div>
@@ -94,14 +94,14 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>Sunny Isles Beach, FL 33160, United States</span></li>
-                                <li>Phone:<br><span>010-020-0340</span></li>
-                                <li>Office Location:<br><span>North Miami Beach</span></li>
+                                <li>Store Location:<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>Phone:<br><span>+ 7 (727) 259-80-00</span></li>
+                                <li>Office Location:<br><span>РК Алматы ул. Абая 8а </span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>07:30 AM - 9:30 PM Daily</span></li>
+                                <li>Work Hours:<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
                                 <li>Email:<br><span>info@company.com</span></li>
                                 <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
