--- a/templates/index.html
+++ b/templates/index.html
@@ -450,21 +450,16 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>Sunny Isles Beach, FL 33160, United States</span></li>
-                                <li>Phone:<br><span>010-020-0340</span></li>
-                                <li>Office Location:<br><span>North Miami Beach</span></li>
+                                <li>Store Location:<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>Phone:<br><span>+ 7 (727) 259-80-00</span></li>
+                                <li>Office Location:<br><span>РК Алматы ул. Абая 8а </span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>07:30 AM - 9:30 PM Daily</span></li>
+                                <li>Work Hours:<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
                                 <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br>
-                                    <span>
-                                        <a href="#">Facebook</a>,
-                                        <a href="#">Instagram</a>
-                                    </span>
-                                </li>
+                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
