--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,8 +7,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="inner-content">
-                        <h2>Contact Us</h2>
-                        <span>Awesome, clean &amp; creative HTML5 Template</span>
+                        <h2>{% trans "Contact Us" %}</h2>
+                        <span>{% trans "Awesome, clean &amp; creative HTML5 Template" %}</span>
                     </div>
                 </div>
             </div>
@@ -24,13 +24,13 @@
                     <div id="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4542347295096!2d76.94939847653814!3d43.24190107893467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836ee5463fffff%3A0x18bf9a2d589649bb!2z0L_RgC3Rgi4g0JDQsdCw0Y8gONCwLCDQkNC70LzQsNGC0YsgMDUwMDEw!5e0!3m2!1sru!2skz!4v1713865064642!5m2!1sru!2skz" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
                       <!-- You can simply copy and paste "Embed a map" code from Google Maps for any location. -->
-                      
+
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Say Hello. Don't Be Shy!</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Say Hello. Don't Be Shy!" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                     <form id="contact" action="" method="post">
                         <div class="row">
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-heading">
-                        <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "By Subscribing To Our Newsletter You Can Get 30% Off" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                     <form id="subscribe" action="" method="get">
                         <div class="row">
@@ -94,16 +94,16 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>РК Алматы ул. Абая 8а </span></li>
-                                <li>Phone:<br><span>+ 7 (727) 259-80-00</span></li>
-                                <li>Office Location:<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>{% trans "Store Location:" %}<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>{% trans "Phone:" %}<br><span>+ 7 (727) 259-80-00</span></li>
+                                <li>{% trans "Office Location:" %}<br><span>РК Алматы ул. Абая 8а </span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
-                                <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
+                                <li>{% trans "Work Hours:" %}<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
+                                <li>{% trans "Email:" %}<br><span>info@company.com</span></li>
+                                <li>{% trans "Social Media:" %}<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
