--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,10 @@
                     <div class="left-content">
                         <div class="thumb">
                             <div class="inner-content">
-                                <h4>We Are Hexashop</h4>
-                                <span>Awesome, clean &amp; creative shop</span>
+                                <h4>{% trans "We Are Hexashop" %}</h4>
+                                <span>{% trans "Awesome, clean &amp; creative shop" %}</span>
                                 <div class="main-border-button">
-                                    <a href="{% url 'women_url' %}">Purchase Now!</a>
+                                    <a href="{% url 'women_url' %}">{% trans "Purchase Now!" %}</a>
                                 </div>
                             </div>
                             <img src="{% static 'images/left-banner-image.jpg' %}" alt="">
@@ -26,15 +26,15 @@
                                 <div class="right-first-image">
                                     <div class="thumb">
                                         <div class="inner-content">
-                                            <h4>Women</h4>
-                                            <span>Best Clothes For Women</span>
+                                            <h4>{% trans "Women" %}</h4>
+                                            <span>{% trans "Best Clothes For Women" %}</span>
                                         </div>
                                         <div class="hover-content">
                                             <div class="inner">
-                                                <h4>Women</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                                <h4>{% trans "Women" %}</h4>
+                                                <p>{% trans "Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid." %}</p>
                                                 <div class="main-border-button">
-                                                    <a href="{% url 'women_url' %}">Discover More</a>
+                                                    <a href="{% url 'women_url' %}">{% trans "Discover More" %}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -46,15 +46,15 @@
                                 <div class="right-first-image">
                                     <div class="thumb">
                                         <div class="inner-content">
-                                            <h4>Men</h4>
-                                            <span>Best Clothes For Men</span>
+                                            <h4>{% trans "Men" %}</h4>
+                                            <span>{% trans "Best Clothes For Men" %}</span>
                                         </div>
                                         <div class="hover-content">
                                             <div class="inner">
-                                                <h4>Men</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                                <h4>{% trans "Men" %}</h4>
+                                                <p>{% trans "Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid." %}</p>
                                                 <div class="main-border-button">
-                                                    <a href="{% url 'men_url' %}">Discover More</a>
+                                                    <a href="{% url 'men_url' %}">{% trans "Discover More" %}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -66,15 +66,15 @@
                                 <div class="right-first-image">
                                     <div class="thumb">
                                         <div class="inner-content">
-                                            <h4>Kids</h4>
-                                            <span>Best Clothes For Kids</span>
+                                            <h4>{% trans "Kids" %}</h4>
+                                            <span>{% trans "Best Clothes For Kids" %}</span>
                                         </div>
                                         <div class="hover-content">
                                             <div class="inner">
-                                                <h4>Kids</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                                <h4>{% trans "Kids" %}</h4>
+                                                <p>{% trans "Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid." %}</p>
                                                 <div class="main-border-button">
-                                                    <a href="{% url 'kid_url' %}">Discover More</a>
+                                                    <a href="{% url 'kid_url' %}">{% trans "Discover More" %}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -86,15 +86,15 @@
                                 <div class="right-first-image">
                                     <div class="thumb">
                                         <div class="inner-content">
-                                            <h4>Accessories</h4>
-                                            <span>Best Trend Accessories</span>
+                                            <h4>{% trans "Accessories" %}</h4>
+                                            <span>{% trans "Best Trend Accessories" %}</span>
                                         </div>
                                         <div class="hover-content">
                                             <div class="inner">
-                                                <h4>Accessories</h4>
-                                                <p>Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid.</p>
+                                                <h4>{% trans "Accessories" %}</h4>
+                                                <p>{% trans "Lorem ipsum dolor sit amet, conservisii ctetur adipiscing elit incid." %}</p>
                                                 <div class="main-border-button">
-                                                    <a href="{% url 'accessories_url' %}">Discover More</a>
+                                                    <a href="{% url 'accessories_url' %}">{% trans "Discover More" %}</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Men's Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Men's Latest" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
             </div>
@@ -171,8 +171,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Women's Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Women's Latest" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
             </div>
@@ -226,8 +226,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Kid's Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Kid's Latest" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
             </div>
@@ -281,20 +281,20 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="left-content">
-                        <h2>Explore Our Products</h2>
-                        <span>Welcome to our online store, where style meets comfort and quality.
+                        <h2>{% trans "Explore Our Products" %}</h2>
+                        <span>{% trans "Welcome to our online store, where style meets comfort and quality.
                             Embark on a journey through our vast array of products meticulously curated to cater to your
                             fashion needs. From timeless classics to trendy essentials, our collection has something for
-                            everyone.</span>
-                        <p>Comfort is paramount in our selection process. Dive into a realm of unparalleled comfort with
+                            everyone." %}</span>
+                        <p>{% trans "Comfort is paramount in our selection process. Dive into a realm of unparalleled comfort with
                             our carefully selected fabrics and designs. From cozy loungewear to chic activewear, our
                             products are designed to seamlessly blend style with functionality, ensuring that you look and
-                            feel your best, no matter the occasion.</p>
-                        <p>At our online store, we prioritize customer satisfaction above all else. With user-friendly
+                            feel your best, no matter the occasion." %}</p>
+                        <p>{% trans "At our online store, we prioritize customer satisfaction above all else. With user-friendly
                             navigation and a seamless shopping experience, finding your perfect ensemble has never been
                             easier. Explore our products with confidence, knowing that each item has been chosen with your
                             utmost satisfaction in mind. Join us on this exciting journey and elevate your wardrobe to new
-                            heights of style and sophistication.</p>
+                            heights of style and sophistication." %}</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -302,8 +302,8 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="leather">
-                                    <h4>Leather Bags</h4>
-                                    <span>Latest Collection</span>
+                                    <h4>{% trans "Leather Bags" %}</h4>
+                                    <span>{% trans "Latest Collection" %}</span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -318,8 +318,8 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="types">
-                                    <h4>Different Types</h4>
-                                    <span>Over 304 Products</span>
+                                    <h4>{% trans "Different Types" %}</h4>
+                                    <span>{% trans "Over 304 Products" %}</span>
                                 </div>
                             </div>
                         </div>
@@ -336,8 +336,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Social Media</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Social Media" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
             </div>
@@ -348,7 +348,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Fashion</h6>
+                                <h6>{% trans "Fashion" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -359,7 +359,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>New</h6>
+                                <h6>{% trans "New" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -370,7 +370,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Brand</h6>
+                                <h6>{% trans "Brand" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -381,7 +381,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Makeup</h6>
+                                <h6>{% trans "Makeup" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -392,7 +392,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Leather</h6>
+                                <h6>{% trans "Leather" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -403,7 +403,7 @@
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Bag</h6>
+                                <h6>{% trans "Bag" %}</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -421,8 +421,8 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-heading">
-                        <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "By Subscribing To Our Newsletter You Can Get 30% Off" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                     <form id="subscribe" action="" method="get">
                         <div class="row">
@@ -450,16 +450,16 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>РК Алматы ул. Абая 8а </span></li>
-                                <li>Phone:<br><span>+ 7 (727) 259-80-00</span></li>
-                                <li>Office Location:<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>{% trans "Store Location:" %}<br><span>РК Алматы ул. Абая 8а </span></li>
+                                <li>{% trans "Phone:" %}<br><span>+ 7 (727) 259-80-00</span></li>
+                                <li>{% trans "Office Location:" %}<br><span>РК Алматы ул. Абая 8а </span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
-                                <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
+                                <li>{% trans "Work Hours:" %}<br><span>Понедельник — Пятница: с 09.00 до 18.00</span></li>
+                                <li>{% trans "Email:" %}<br><span>info@company.com</span></li>
+                                <li>{% trans "Social Media:" %}<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
