--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -5,10 +5,10 @@
         <div class="container">
             <table style="width: 80vw;">
                 <tr>
-                    <th>Id</th>
-                    <th>Email</th>
-                    <th>Date and Time</th>
-                    <th>Action</th>
+                    <th>{% trans "Id" %}</th>
+                    <th>{% trans "Email" %}</th>
+                    <th>{% trans "Date and Time" %}</th>
+                    <th>{% trans "Action" %}</th>
                 </tr>
                 {% for ticket in tickets %}
                     <tr>
