--- a/templates/about.html
+++ b/templates/about.html
@@ -7,8 +7,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="inner-content">
-                        <h2>About Our Company</h2>
-                        <span>Awesome, clean &amp; creative HTML5 Template</span>
+                        <h2>{% trans "About Our Company" %}</h2>
+                        <span>{% trans "Awesome, clean &amp; creative HTML5 Template" %}</span>
                     </div>
                 </div>
             </div>
@@ -27,12 +27,12 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="right-content">
-                        <h4>About Us &amp; Our Skills</h4>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore.</span>
+                        <h4>{% trans "About Us &amp; Our Skills" %}</h4>
+                        <span>{% trans "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore." %}</span>
                         <div class="quote">
-                            <i class="fa fa-quote-left"></i><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod kon tempor incididunt ut labore.</p>
+                            <i class="fa fa-quote-left"></i><p>{% trans "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod kon tempor incididunt ut labore." %}</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                        <p>{% trans "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip." %}</p>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -52,8 +52,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Amazing Team</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Our Amazing Team" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -73,7 +73,7 @@
                         </div>
                         <div class="down-content">
                             <h4>Коблан Ерасыл</h4>
-                            <span>Product Caretaker</span>
+                            <span>{% trans "Product Caretaker" %}</span>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="down-content">
                             <h4>Байбекова Ахмаржан</h4>
-                            <span>Product Caretaker</span>
+                            <span>{% trans "Product Caretaker" %}</span>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="down-content">
                             <h4>Султанали Нурдияр</h4>
-                            <span>Product Caretaker</span>
+                            <span>{% trans "Product Caretaker" %}</span>
                         </div>
                     </div>
                 </div>
@@ -130,28 +130,28 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Our Services</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "Our Services" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Synther Vaporware</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>{% trans "Synther Vaporware" %}</h4>
+                        <p>{% trans "Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend." %}</p>
                         <img src="{% static 'images/service-01.jpg' %}">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Locavore Squidward</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>{% trans "Locavore Squidward" %}</h4>
+                        <p>{% trans "Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend." %}</p>
                         <img src="{% static 'images/service-02.jpg' %}">
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="service-item">
-                        <h4>Health Gothfam</h4>
-                        <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
+                        <h4>{% trans "Health Gothfam" %}</h4>
+                        <p>{% trans "Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend." %}</p>
                         <img src="{% static 'images/service-03.jpg' %}">
                     </div>
                 </div>
@@ -166,8 +166,8 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-heading">
-                        <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>{% trans "By Subscribing To Our Newsletter You Can Get 30% Off" %}</h2>
+                        <span>{% trans "Details to details is what makes Hexashop different from the other themes." %}</span>
                     </div>
                     <form id="subscribe" action="" method="get">
                         <div class="row">
@@ -193,16 +193,16 @@
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>РК г.Алматы ул.Абая 8а</span></li>
-                                <li>Phone:<br><span>+7(727)259-80-00</span></li>
-                                <li>Office Location:<br><span>РК г.Алматы ул.Абая 8а</span></li>
+                                <li>{% trans "Store Location:" %}<br><span>РК г.Алматы ул.Абая 8а</span></li>
+                                <li>{% trans "Phone:" %}<br><span>+7(727)259-80-00</span></li>
+                                <li>{% trans "Office Location:" %}<br><span>РК г.Алматы ул.Абая 8а</span></li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>Понедельник — Пятница с 09:00 до 18:00</span></li>
-                                <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
+                                <li>{% trans "Work Hours:" %}<br><span>Понедельник — Пятница с 09:00 до 18:00</span></li>
+                                <li>{% trans "Email:" %}<br><span>info@company.com</span></li>
+                                <li>{% trans "Social Media:" %}<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
