--- a/templates/base.html
+++ b/templates/base.html
@@ -101,35 +101,35 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <h4>Shopping &amp; Categories</h4>
+                <h4>{% trans "Shopping &amp; Categories" %}</h4>
                 <ul>
-                    <li><a href="#">Men’s Shopping</a></li>
-                    <li><a href="#">Women’s Shopping</a></li>
-                    <li><a href="#">Kid's Shopping</a></li>
+                    <li><a href="#">{% trans "Men’s Shopping" %}</a></li>
+                    <li><a href="#">{% trans "Women’s Shopping" %}</a></li>
+                    <li><a href="#">{% trans "Kid's Shopping" %}</a></li>
                 </ul>
             </div>
             <div class="col-lg-3">
-                <h4>Useful Links</h4>
+                <h4>{% trans "Useful Links" %}</h4>
                 <ul>
-                    <li><a href="{% url 'home_url' %}">Homepage</a></li>
-                    <li><a href="{% url 'men_url' %}">About Us</a></li>
-                    <li><a href="{% url 'women_url' %}">Help</a></li>
-                    <li><a href="{% url 'kid_url' %}">Contact Us</a></li>
+                    <li><a href="{% url 'home_url' %}">{% trans "Homepage" %}</a></li>
+                    <li><a href="{% url 'men_url' %}">{% trans "About Us" %}</a></li>
+                    <li><a href="{% url 'women_url' %}">{% trans "Help" %}</a></li>
+                    <li><a href="{% url 'kid_url' %}">{% trans "Contact Us" %}</a></li>
                 </ul>
             </div>
             <div class="col-lg-3">
-                <h4>Help &amp; Information</h4>
+                <h4>{% trans "Help &amp; Information" %}</h4>
                 <ul>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Shipping</a></li>
-                    <li><a href="#">Tracking ID</a></li>
+                    <li><a href="#">{% trans "Help" %}</a></li>
+                    <li><a href="#">{% trans "FAQ's" %}</a></li>
+                    <li><a href="#">{% trans "Shipping" %}</a></li>
+                    <li><a href="#">{% trans "Tracking ID" %}</a></li>
                 </ul>
             </div>
             <div class="col-lg-12">
                 <div class="under-footer">
-                    <p>Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved.
-                        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
+                    <p>{% trans "Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved." %}
+                        <br>{% trans "Design:" %} <a href="https://templatemo.com" target="_parent" title="free css templates">{% trans "TemplateMo</a>
                     </p>
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
