--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -5,23 +5,23 @@
     <div class="page-heading" style="background: none">
         <div class="container" align="center" style="width: 35vw">
             <div class="card px-4">
-                <p class="h4 py-3">Payment Details</p>
+                <p class="h4 py-3">{% trans "Payment Details</p>
                     <div class="row gx-3">
                         <div class="col-12">
                             <div class="d-flex flex-column">
-                                <p class="text mb-1" align="left">Person Name</p>
+                                <p class="text mb-1" align="left">{% trans "Person Name" %}</p>
                                 <input class="form-control mb-3" type="text" placeholder="Name" required="required">
                             </div>
                         </div>
                     <div class="col-12">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">Card Number</p>
+                            <p class="text mb-1" align="left">{% trans "Card Number" %}</p>
                             <input class="form-control mb-3" type="text" placeholder="1234 5678 9012 3456" required="required">
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">Expiry</p>
+                            <p class="text mb-1" align="left">{% trans "Expiry" %}</p>
                             <input class="form-control mb-3" type="text" placeholder="MM/YYYY" required="required">
                         </div>
                     </div>
@@ -32,38 +32,38 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <p class="text mb-1" align="center">Delivery (+30$)</p>
+                        <p class="text mb-1" align="center">{% trans "Delivery" %} (+30$)</p>
                         <input class="form-control mb-3 pt-2" type="checkbox" id="delivery" onchange="deliveryFunction()">
                     </div>
 
                     <div class="col-12 location" hidden="hidden">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">Country</p>
+                            <p class="text mb-1" align="left">{% trans "Country" %}</p>
                             <input class="form-control mb-3" type="text" placeholder="Kazakhstan">
                         </div>
                     </div>
                     <div class="col-4 location" hidden="hidden">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">City</p>
+                            <p class="text mb-1" align="left">{% trans "City" %}</p>
                             <input class="form-control mb-3" type="text" placeholder="Almaty">
                         </div>
                     </div>
                     <div class="col-4 location" hidden="hidden">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">Address</p>
+                            <p class="text mb-1" align="left">{% trans "Address" %}</p>
                             <input class="form-control mb-3 pt-2 " type="password" placeholder="Collins Ave">
                         </div>
                     </div>
                     <div class="col-4 location" hidden="hidden">
                         <div class="d-flex flex-column">
-                            <p class="text mb-1" align="left">ZIP</p>
+                            <p class="text mb-1" align="left">{% trans "ZIP" %}</p>
                             <input class="form-control mb-3 pt-2 " type="password" placeholder="16501">
                         </div>
                     </div>
 
                     <div class="col-12">
                         <div class="btn btn-outline-secondary mb-3" onclick="location.href='{% url 'buy_url' %}'">
-                            <span class="ps-3" id="total">Pay ${{ total }}</span>
+                            <span class="ps-3" id="total">{% trans "Pay" %} ${{ total }}</span>
                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
                         </div>
                     </div>
