--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,28 +5,28 @@
         <div class="profile" align="center">
             <table style="width: 30vw">
                 <tr style="border-bottom: 1px solid black;">
-                    <td>Email:</td>
+                    <td>{% trans "Email:" %}</td>
                     <td align="right">{{ user.email }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
-                    <td>First Name:</td>
+                    <td>{% trans "First Name:" %}</td>
                     <td align="right">{{ user.first_name }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
-                    <td>Last Name:</td>
+                    <td>{% trans "Last Name:" %}</td>
                     <td align="right">{{ user.last_name }}</td>
                 </tr>
                 <tr style="border-bottom: 1px solid black;">
-                    <td>Date Joined:</td>
+                    <td>{% trans "Date Joined:" %}</td>
                     <td align="right">{{ user.date_joined }}</td>
                 </tr>
                 <tr>
-                    <td align="left"><a href="{% url 'favourites_url' %}">My Favourites</a></td>
-                    <td align="right"><a href="{% url 'history_url' %}">History</a></td>
+                    <td align="left"><a href="{% url 'favourites_url' %}">{% trans "My Favourites" %}</a></td>
+                    <td align="right"><a href="{% url 'history_url' %}">{% trans "History" %}</a></td>
                 </tr>
                 {% if user.is_staff %}
                     <tr>
-                        <td><a href="{% url 'tickets_url' %}">Show Tickets</a></td>
+                        <td><a href="{% url 'tickets_url' %}">{% trans "Show Tickets" %}</a></td>
                     </tr>
                 {% endif %}
             </table>
