--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -2,6 +2,7 @@
 {% load cart_tag %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading" style="background: none">
         <div class="container" align="center" style="width: 35vw">
             <div class="card px-4">
