--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <br><br>
     <!-- ***** Product Area Starts ***** -->
     <section class="section" id="product">
