--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading about-page-heading" id="top" style="background: none">
         <div class="profile" align="center">
             <table style="width: 30vw">
