--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,7 +59,26 @@
                                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                             </a>
                         </li>
+                        <li>
+                            {% get_current_language as CURRENT_LANGUAGE %}
+                            {% get_available_languages as AVAILABLE_LANGUAGES %}
+                            {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+                            <div class="languages">
+                                <p>{% trans "Language" %}:</p>
+                                <ul class="languages">
+                                    {% for language in languages %}
+                                        <li>
+                                            <a href="/{{ language.code }}/"
+                                                {% if language.code == CURRENT_LANGUAGE %} class="active"{% endif %}>
+                                                {{ language.name_local }}
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </li>
                     </ul>
+
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
@@ -129,7 +149,7 @@
             <div class="col-lg-12">
                 <div class="under-footer">
                     <p>{% trans "Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved." %}
-                        <br>{% trans "Design:" %} <a href="https://templatemo.com" target="_parent" title="free css templates">{% trans "TemplateMo</a>
+                        <br>{% trans "Design:" %} <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a>
                     </p>
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
