--- a/templates/history.html
+++ b/templates/history.html
@@ -2,6 +2,7 @@
 {% load cart_tag %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading" style="background: none">
         <div class="container" align="center">
             <h3 align="center">{% trans "Order History:" %}</h3>
