--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading about-page-heading" id="top" style="background: none">
         <div class="form">
             <form action="{% url 'register_url' %}" method="post">
