--- a/templates/ticket_detail.html
+++ b/templates/ticket_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading about-page-heading" id="top" style="background: none">
         <div class="container">
             <h4 style="display: inline">{% trans "Status:" %} </h4>
