--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
     <div class="page-heading about-page-heading" id="top" style="background: none">
         <div class="container">
             <table style="width: 80vw;">
