--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
 <!-- ***** Header Area Start ***** -->
 <header class="header-area header-sticky">
-    <div class="container" style="margin-left: 200px, max-width: 100vw">
+    <div class="container" style="margin-left: 200px; max-width: 100vw">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
